# renpyfmt

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  TODO.md  dist-workspace.toml  pyoxidizer.bzl  pyproject.toml
.github/workflows/: build.yml  release.yml
benches/: end_to_end.rs  formatter.rs  logical_lines.rs  parser.rs
benches/fixtures/: atl_heavy.rpy  dialogue_heavy.rpy  embedded_python.rpy  embedded_python_block.pyfrag  nested_control_flow.rpy  screen_language.rpy  script_ren.py
benches/support/: mod.rs
black/: __init__.py  brackets.py  cache.py  comments.py  concurrency.py  files.py  handle_ipynb_magics.py  linegen.py  lines.py  mode.py  nodes.py  output.py  parsing.py  report.py  strings.py  trans.py
blib2to3/: pygram.py  pytree.py
blib2to3/pgen2/: driver.py  grammar.py  parse.py  pgen.py  tokenize.py
renpyfmt/: __init__.py  cli.py  code_format.py  common.py  format.py
renpyparse/: format.py
renpyparse/renpy/: __init__.py  ast.py  ast_original.py  atl.py  color.py  easy.py  lexer.py  lexer_original.py  lexersupport.py  minstore.py  parser.py  py3analysis.py  python.py  renpyparser.py  revertable.py  transform.py
src/: ast.rs  atl.rs  comments.rs  error.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  project.rs  ruff_config.rs  slast.rs  test_support.rs  testast.rs  trie.rs
src/formatter/: ast.rs  atl.rs  core.rs  inline.rs  mod.rs  python.rs  slast.rs  test_language.rs  tests.rs
src/parser/: atl_properties.inc  atl_warpers.inc  keywords.rs  mod.rs  registry.rs  screen_language.rs  statements_flow.rs  statements_init.rs  statements_media.rs  statements_translate.rs  style_properties.inc  test_language.rs  tests.rs
tests/: format_check.rs
