[package]
name = "renpyfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
walkdir = "2.5.0"
anyhow = "1.0.102"
pathdiff = "0.2.3"
indicatif = "0.18"
once_cell = "1.21.4"
derivative = "2.2.0"
lazy_static = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
ruff_workspace = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }

[profile.release]
# lto = "thin"
# strip = true
debug = true
