[package]
name = "renpyfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "1.0.0"
regex = "1.12.3"
rayon = "1.11.0"
walkdir = "2.5.0"
anyhow = "1.0.102"
pathdiff = "0.2.3"
etcetera = "0.11.0"
derivative = "2.2.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = { version = "0.18", default-features = false }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.10" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "logical_lines"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "formatter"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[profile.release]
strip = true
opt-level = 3
codegen-units = 16
lto = "thin"
