[package]
name = "renpyfmt"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/kobaltcore/renpyfmt"
description = "An opinionated source code formatter for Ren'Py script."
homepage = "https://github.com/kobaltcore/renpyfmt"
license = "MIT"

[dependencies]
toml = "1.1.2"
regex = "1.12.3"
rayon = "1.12.0"
walkdir = "2.5.0"
anyhow = "1.0.102"
pathdiff = "0.2.3"
etcetera = "0.11.0"
derivative = "2.2.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = { version = "0.18", default-features = false }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.12" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.12" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.15.12" }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "logical_lines"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "formatter"
harness = false

[[bench]]
name = "end_to_end"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[profile.release]
strip = true
opt-level = 3
codegen-units = 16
lto = "thin"
