[tool.poetry]
name = "renpyfmt"
version = "0.1.0"
description = "A Ren'Py formatter."
authors = ["cobaltcore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
renpyfmt = "renpyfmt:cli"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
fix = true
force-exclude = true # necessary for excludes to work in pre-commit
exclude = [
    "black/",
    "blib2to3/",
]
ignore = [
    "E402",
    "E722",
    "TID252",
    "C901",
]
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "S105",
    "S106",
    "S107",
    "C",
    "B",
    "Q",
    "RUF",
]
